--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html>
 
 <head>
-	<title>WhatsApp phone No. trimmer</title>
+	<title>WhatsApp trimmer</title>
 	<meta charset="utf-8" />
 	<meta name="description"
 		content="Form allows to past WhatsApp phone numbers (e.g. Google Maps) and do the trimming (remove unsupported characters). After clicking the button WhatsApp application is opened in your phone/laptop (if installed). Afterwards, the phone No. field is cleaned allowing to past another phone No. to send the same message">
 	<meta name="keywords" content="WhatsApp,trimmer">
 	<meta name="author" content="maikl.lt">
-	<link rel="icon" type="image/x-icon" href="/favicon.ico">
+	<link rel="icon" type="image/x-icon" href="favicon.ico">
 	<link rel="stylesheet" href="styles.css">
 	<link rel="stylesheet"
 		href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,100,0,-25" />
-	
+
 	<script src="scripts.js"></script>
 
 	<!-- Google tag (gtag.js) -->
@@ -33,13 +33,21 @@
 		<div class="circle"></div>
 		<div class="form-inner">
 			<h1>Let's send some messages!</h1>
-			<input id="WAphoneNumber" type="text" placeholder="Phone Number">
+			<div class="phoneNumberSection">
+				<input id="WAphoneCountryCode" type="text" placeholder="Code">
+				<input id="WAphoneNumber" type="text" placeholder="Phone Number">
+			</div>
 			<div class="messageTextArea">
 				<textarea id="WAtext" placeholder="message..." rows="5"></textarea>
 				<span class="material-symbols-rounded cleaning-icon" onclick=clearWAtext()>
 					mop</span>
 			</div>
 			<button type="button" onclick=openWA()>Open WA</button>
+		</div>
+		<div class="gitHubLink">
+			<a href="https://github.com/maikllt/WhatsApp-trimmer" title="GitHub repository" target="_blank">
+				<img src="github-mark.png" height="25px">
+			</a>
 		</div>
 	</form>
 </body>
